welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: value unary_! is not a member of Unit
while (!estSurBiscuit & !prendBiscuit) {
                        ^